# seaplane

./: .gitignore  CMakeLists.txt  httpsclient.cpp  main.cpp
include/seaplane/: args.hpp  error.hpp  log.hpp  variant.hpp
